--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,15 @@
-/* body {
-	text-align:center;
-	padding-top:40px;
-	margin: 0px;
-	padding:0px;
-	border: 0px;
+html, body {
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	overflow: hidden;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
 }
 
 #calculator {
-	height: 400px;
-} */
-
-html, body, #calculator {
-	min-height: 100% !important;
-	height: 100%;
-	min-width: 100% !important;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	border: 0;
+	flex: 1;
 }
